BE with dummy context data working